--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
 .bullets {
     list-style-type: circle;
 }
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+  }
+  
+  body {
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #333333;
+    background-size: auto;
+    background-position: center;
+    display: grid
+  }
+  
+  p, h2, h3, label, input, #content {
+    text-align: center; /* Align form elements to the center */
+    margin: 15px;
+  }
+  
