--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,7 @@ html, body {
     text-align: center; /* Align form elements to the center */
     margin: 15px;
   }
+  header{
+    text-align: center;
+  }
   
