--- a/css/style.css
+++ b/css/style.css
@@ -22,4 +22,28 @@ html, body {
   header{
     text-align: center;
   }
-  
+  @media only screen and (max-device-width: 480px) {
+    div#wrapper {
+        width: 400px;
+    }
+
+    div#header {
+        background-image: url(media-queries-phone.jpg);
+        height: 93px;
+        position: relative;
+    }
+
+    div#header h1 {
+        font-size: 140%;
+    }
+
+    #content {
+        float: none;
+        width: 100%;
+    }
+
+    #nav-list {
+        float:none;
+        width: auto;
+    }
+}
