--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,11 @@ html, body {
   
   body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #333333;
+    background-color: white;
     background-size: auto;
     background-position: center;
-    display: grid
+    display: grid;
+    color:black
   }
   
   p, h2, h3, label, input, #content {
