--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html, body {
     margin: 0;
   }
   
-  body {
+body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: white;
     background-size: auto;
@@ -16,24 +16,40 @@ html, body {
     color:black
   }
   
-  p, h2, h3, label, input, #content {
+p, h2, h3, label, input, #content {
     text-align: center; /* Align form elements to the center */
     margin: 15px;
   }
-  header{
+#nav-list{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: aqua;
+  }
+  li{
+    float: left;
     text-align: center;
   }
-  @media only screen and (max-device-width: 480px) {
+  li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  li a:hover{
+    background-color: aquamarine;
+  }
+
+
+header{
+    text-align: center;
+  }
+@media only screen and (max-device-width: 480px) {
     div#wrapper {
         width: 400px;
     }
-
-    div#header {
-        background-image: url(media-queries-phone.jpg);
-        height: 93px;
-        position: relative;
-    }
-
     div#header h1 {
         font-size: 140%;
     }
