--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p, h2, h3, label, input, #content {
     text-align: center; /* Align form elements to the center */
     margin: 15px;
   }
-#nav-list{
+nav{
     list-style-type: none;
     margin: 0;
     padding: 0;
