--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -1,6 +1,11 @@
-nav {
+#bar ul {
  display: inline-block;
  list-style-type: none;
  width: 25%;
  background-color: rgb(19, 206, 19);
+ float: left;
+}
+
+#bar li{
+ 
 }
