--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -1,7 +1,7 @@
 #bar ul {
  display: inline-block;
  list-style-type: none;
- background-color: rgb(19, 206, 19);
+ background-color: rgb(8, 179, 226);
  width: 100%;
 }
 
@@ -10,6 +10,8 @@
  width: 25%;
  text-align: center;
  font-size: 1.25rem;
+ text-decoration: none;
+ color: white;
 }
 
 h1 {
