--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -1,3 +1,13 @@
+h1 {
+ font-size: 3.052rem;
+}
+
+h3 {
+ font-size: 1.25rem;
+ text-align: center
+}
+
+/*Nav bar css */
 #bar ul {
  display: inline-block;
  list-style-type: none;
@@ -21,6 +31,15 @@
  background-color: rgb(3, 3, 86);
 }
 
-h1 {
- font-size: 3.052rem;
+/*Hyperlink list css */
+
+#infols li{
+ text-align: center;
+ font-size: 1.25rem;
+ padding-bottom: 10px;
+}
+
+#infols a{
+ text-decoration: none;
+ color: black;
 }
