--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -36,7 +36,8 @@ h3 {
 
 #infols li{
  font-size: 1.25rem;
- padding-bottom: 10px;
+ padding-top: 5%;
+ padding-bottom: 10%;
  margin: 0 auto;
  width: 50%;
 }
