--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -9,13 +9,13 @@ h3 {
 }
 
 /*Nav bar css */
-#bar ul {
+#nav ul {
  display: inline-block;
  list-style-type: none;
  width: 100%;
 }
 
-#bar li{
+#nav li{
  float: left;
  width: 25%;
  text-align: center;
@@ -23,12 +23,12 @@ h3 {
  background-color: rgb(8, 179, 226);
 }
 
-#bar a{
+#nav a{
  text-decoration: none;
  color: white;
 }
 
-#bar li:hover{
+#nav li:hover{
  background-color: rgb(3, 3, 86);
 }
 
