adjusting social links nav bar
added measurements for #social li

--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -52,14 +52,21 @@ h3 {
 }
 
 /*Social bar css */
-#social {
- width: 100%;
- background-color: rgb(3, 3, 109);
-}
+
 #social ul{
  list-style-type: none;
+ width: 100%;
+ background-color: rgb(3, 3, 109);
 }
 
 #social li{
  float: right;
+ width: 10%;
+ text-align: center;
+ font-size: 1.25rem;
+ background-color: rgb(3, 3, 109);
+}
+
+#nav a{
+ text-decoration: none;
 }
