--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -55,7 +55,7 @@ h3 {
 #social {
  width: 100%;
  height: 50px;
- background-color: aqua;
+ background-color: rgb(47, 47, 241);
  border: 2px solid black;
 }
 #social ul{
@@ -69,9 +69,9 @@ h3 {
  width: 10%;
  text-align: center;
  font-size: 1.25rem;
- background-color: rgb(3, 3, 109);
 }
 
 #nav a{
  text-decoration: none;
+ color: white;
 }
