--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -11,7 +11,6 @@ h3 {
 /*Nav bar css */
 
 nav{
-    
  list-style-type: none;
  margin: 0;
  padding: 0;
@@ -20,6 +19,7 @@ nav{
 }
 
 #nav ul {
+ margin: 0 auto;
  display: inline-block;
 }
 
