--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -65,11 +65,14 @@ nav{
 
 /*Social bar css */
 #social {
+ position: relative;
  width: 100%;
  height: 50px;
  border: 2px solid black;
 }
 #social ul{
+ position: absolute;
+ bottom: 0;
  list-style-type: none;
  width: 100%;
  background-color: rgb(3, 3, 109);
