--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -65,10 +65,15 @@ nav{
 }
 
 /*Social bar css */
-
-#social ul{
+#social {
  position: absolute;
  bottom: 0;
+ width: 100%;
+ height: 50px;
+ border: 2px solid black;
+}
+
+#social ul{
  list-style-type: none;
  width: 100%;
  background-color: rgb(3, 3, 109);
