--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -74,11 +74,12 @@ nav{
 }
 
 #social ul{
+ padding-top: 2%;
  position: absolute;
  bottom: 0;
  list-style-type: none;
  width: 100%;
- height: 20%;
+ height: 10%;
  background-color: rgb(3, 3, 109);
 }
 
