--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -82,7 +82,7 @@ nav{
  list-style-type: none;
  width: 100%;
  height: 50px;
- background-color:aquamarine);
+ background-color:aquamarine;
 }
 
 #social li{
