making a new setup for hyperlinks
instead of have the links be in a list I'm going to have them setup separate boxed areas that will display their info

--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -49,7 +49,14 @@ nav{
  background-color: aquamarine;
 }
 
-/*Hyperlink list css */
+/*Hyperlinks css*/
+
+.setup{
+ width: 25%;
+ margin: 0 auto;
+ background-color: rgb(44, 123, 149);
+ border-radius: 3%;
+}
 
 #infols li{
  text-align: start;
