--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -52,7 +52,8 @@ nav{
 /*Hyperlinks css*/
 
 .setup{
- width: 25%;
+ width: 50%;
+ height: 10%;
  margin: 0 auto;
  background-color: rgb(44, 123, 149);
  border-radius: 3%;
