--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -52,8 +52,26 @@ nav{
 /*Hyperlinks css*/
 
 .setup{
- width: 50%;
- height: 10%;
+ width: 75%;
+ margin: 0 auto;
+}
+
+#dialogue{
+ width: 25%;
+ margin: 0 auto;
+ background-color: rgb(44, 123, 149);
+ border-radius: 3%;
+}
+
+#video{
+ width: 25%;
+ margin: 0 auto;
+ background-color: rgb(44, 123, 149);
+ border-radius: 3%;
+}
+
+#past{
+ width: 25%;
  margin: 0 auto;
  background-color: rgb(44, 123, 149);
  border-radius: 3%;
