--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -56,22 +56,29 @@ nav{
  margin: 0 auto;
 }
 
+#peru{
+ width: 50%;
+ margin: 0 auto;
+ background-color: rgb(44, 123, 149);
+ border-radius: 3%;
+}
+
 #dialogue{
- width: 25%;
+ width: 50%;
  margin: 0 auto;
  background-color: rgb(44, 123, 149);
  border-radius: 3%;
 }
 
 #video{
- width: 25%;
+ width: 50%;
  margin: 0 auto;
  background-color: rgb(44, 123, 149);
  border-radius: 3%;
 }
 
 #past{
- width: 25%;
+ width: 50%;
  margin: 0 auto;
  background-color: rgb(44, 123, 149);
  border-radius: 3%;
