--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -71,6 +71,30 @@ nav{
  background-color: aquamarine;
 }
 
+#peru{
+ width: 100%;
+ height: 100%;
+ text-align: center;
+}
+
+#dialogue{
+ width: 100%;
+ height: 100%;
+ text-align: center;
+}
+
+#video{
+ width: 100%;
+ height: 100%;
+ text-align: center;
+}
+
+#past{
+ width: 100%;
+ height: 100%;
+ text-align: center;
+}
+
 /*Social bar css */
 
 #social {
