--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -72,26 +72,22 @@ nav{
 }
 
 #peru{
- width: 100%;
- height: 100%;
+ display: block;
  text-align: center;
 }
 
 #dialogue{
- width: 100%;
- height: 100%;
+ display: block;
  text-align: center;
 }
 
 #video{
- width: 100%;
- height: 100%;
+ display: block;
  text-align: center;
 }
 
 #past{
- width: 100%;
- height: 100%;
+ display: block;
  text-align: center;
 }
 
