--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -58,6 +58,7 @@ nav{
 
 .borders{
  width: 35%;
+ height: fit-content;
  margin: 0 auto;
  display: inline-block;
  background-color: rgb(44, 123, 149);
