--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -17,6 +17,11 @@ body {
 .header h1 {
   font-size: 50px;
 }
+.body h2 {
+  padding:10px;
+  text-align: center;
+  background-color:antiquewhite;
+}
 /*Style for top navigation bar*/
 .topnav {
   overflow: hidden;
