--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -58,7 +58,7 @@ nav{
 }
 
 .borders{
- width: 35%;
+ width: 100%;
  height: 150px;
  margin: 0 auto;
  padding: 2px;
@@ -133,11 +133,19 @@ h1{
  font-size: 2.369rem;
 }
 
+.borders{
+ width: 35%;
+}
+
 }
 
 @media screen and (min-width:840px) {
  h1{
   font-size: 4.209rem;
+ }
+ 
+ .borders{
+  width: 35%;
  }
 
 }
