--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -67,6 +67,11 @@ nav{
  border-radius: 4px;
 }
 
+.borders img{
+ position: absolute;
+ margin: 0 auto;
+}
+
 .borders a{
  color: black;
  text-decoration: none;
