--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -74,6 +74,12 @@ body {
   color: white;
   margin-top: 20px;
 }
+/*centering images*/
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 /*form specific style*/
 .register {
   display: flex;
