--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -59,7 +59,7 @@ nav{
 
 .borders{
  width: 100%;
- height: max-content;
+ height: inherit;
  margin: 0 auto;
  padding: 2px;
  display: inline-block;
