--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -64,6 +64,8 @@ nav{
  display: inline-block;
  background-color: rgb(44, 123, 149);
  border-radius: 4px;
+ margin-top: 2px;
+ margin-bottom: 6px;
 }
 
 .borders a{
