--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -122,6 +122,10 @@ h1{
  width: 35%;
 }
 
+.borders a{
+ font-size: 1rem;
+}
+
 }
 
 @media screen and (min-width:840px) {
@@ -131,6 +135,10 @@ h1{
  
  .borders{
   width: 35%;
+ }
+
+ .borders a{
+  font-size: 1.777rem;
  }
 
 }
