--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -53,7 +53,7 @@ nav{
 /*Hyperlinks css*/
 
 .setup{
- width: 80%;
+ width: 65%;
  margin: 0 auto;
 }
 
@@ -88,16 +88,17 @@ nav{
 /*Social bar css */
 
 #social {
- width: 100%;
- height: 50px;
+ width: 30%;
+ float: left;
+ height: max-content;
+ background-color: aquamarine;
 }
 
 #social ul{
  position: absolute;
- bottom: 0;
  list-style-type: none;
  width: 100%;
- height: 50px;
+ height: max-content;
  background-color:aquamarine;
 }
 
