--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -112,9 +112,8 @@ nav{
  font-size: 1.25rem;
 }
 
-#social a{
- text-decoration: none;
- color: white;
+#social img{
+ width: 10%;
 }
 
 /*Adding media queries*/
