--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -97,8 +97,8 @@ nav{
 
 #social {
  width: 100%;
- padding-left: 100%;
- padding-right: 100%;
+ margin-left: 100%;
+ margin-right: 100%;
  background-color: aquamarine;
 }
 
