--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -97,14 +97,15 @@ nav{
 
 #social {
  width: 100%;
- margin-right: 100%;
- background-color: aquamarine;
 }
 
 #social ul{
  display: block;
  float: left;
  height: max-content;
+ margin-left: 100%;
+ margin-right: 100%;
+ background-color:aquamarine;
 }
 
 #social li{
