--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -102,8 +102,8 @@ nav{
 #social ul{
  display: block;
  width: 100%;
- float: left;
- height: max-content;
+ height: 150px;
+ object-fit: contain;
  background-color:aquamarine;
 }
 
