--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -91,6 +91,7 @@ nav{
 
 /*Social bar css */
 .social1{
+ float: left;
  width: 100%;
  background-color: white;
 }
@@ -101,9 +102,7 @@ nav{
 
 #social ul{
  display: block;
- width: 100%;
- height: 150px;
- object-fit: contain;
+ height: max-content;
  background-color:aquamarine;
 }
 
