--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -60,7 +60,7 @@ h3 {
  height: 150px;
  padding: 2px;
  display: inline-block;
- background-color: rgb(44, 123, 149);
+ background-color: burlywood;
  border-radius: 4px;
  margin-top: 7px;
  margin-bottom: 6px;
@@ -74,7 +74,7 @@ h3 {
 }
 
 .borders:hover{
- background-color: aquamarine;
+ background-color: cadetblue;
 }
 
 .border2{
@@ -97,13 +97,13 @@ h3 {
 
 #social {
  width: 100%;
- background-color:aquamarine;
+ background-color:burlywood;
 }
 
 #social ul{
  display: block;
  height: max-content;
- background-color:aquamarine;
+ background-color:burlywood;
  padding-left: 20%;
  padding-right: 20%;
 }
