--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -54,7 +54,7 @@ h3 {
 }
 
 #social h3{
- background-color: aliceblue;
+ background-color: rgb(237, 218, 194);
  text-align: center;
  padding: 10px;
 }
