--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -87,18 +87,13 @@ h3 {
  width: 100%;
  height: 150px;
  padding: 2px;
+ padding-right: 2%;
+ padding-left: 2%;
  display: inline-block;
  background-color: burlywood;
  border-radius: 4px;
  margin-top: 7px;
  margin-bottom: 6px;
-}
-
-.borders a{
- color: black;
- text-decoration: none;
- font-size: 1.333rem;
- margin-bottom: 1px;
 }
 
 .borders:hover{
@@ -132,10 +127,6 @@ h1{
  width: 20%;
 }
 
-.borders a{
- font-size: 1rem;
-}
-
 }
 
 @media screen and (min-width:840px) {
@@ -151,10 +142,6 @@ h1{
  
  .borders{
   width: 20%;
- }
-
- .borders a{
-  font-size: 1.5rem;
  }
 
 }
