--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -81,7 +81,7 @@ h3 {
 }
 
 .setup h3{
- margin: 0 auto;
+ margin: 1% auto;
  width: 20%;
  padding-top: 1%;
  background-color: rgb(246, 232, 214);
