--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -48,6 +48,7 @@ h3 {
 .social1{
  padding-top: 1%;
  padding-left: 2%;
+ padding-right: 2%;
  float: left;
  width: 100%;
  background-color: white;
