--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -47,6 +47,7 @@ h3 {
 /*Social column css */
 .social1{
  padding-top: 1%;
+ padding-bottom: 1%;
  padding-left: 2%;
  padding-right: 2%;
  float: left;
