--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -120,13 +120,13 @@ h1{
 }
 
 .social1{
- width: 25%;
+ width: 35%;
  height: 100vh;
  float: left;
 }
 
 #social {
- width: 50%;
+ width: 60%;
 }
 
 .borders{
@@ -144,6 +144,10 @@ h1{
   width: 30%;
   float: left;
   height: 100vh;
+ }
+
+ #social {
+  width: 50%;
  }
  
  .borders{
