--- a/css/announce_style.css
+++ b/css/announce_style.css
@@ -23,6 +23,12 @@ h3 {
  box-sizing: border-box;
 }
 
+body {
+ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ padding: 10px;
+ background: aliceblue;
+}
+
 /*Nav bar css */
 
 .navbar{
