--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,9 @@
 
 * {
   box-sizing: border-box;
-=======
-* {
+}
+/*=======*/
+ body{
   box-sizing: border-box;
 }
 body {
@@ -214,7 +215,7 @@ input[type=submit] {
   }
 
 }
-=======
+/*=======*/
 @media only screen and (max-device-width: 480px) {
     div#wrapper {
         width: 400px;
