--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,43 @@ input[type=submit] {
   font-family: 'Fredoka One', cursive;
   background-color: rgba(0, 128, 255, 0.9);
 }
+
+
+/*Event grid for annoucement page css*/
+.setup{
+  padding-top: 2%;
+  display: inline;
+  width: 65%;
+ }
+ 
+ .setup h3{
+  padding-top: 1%;
+  text-align: center;
+ }
+ 
+ .borders{
+  width: 100%;
+  height: 150px;
+  padding: 2px;
+  display: inline-block;
+  background-color: burlywood;
+  border-radius: 4px;
+  margin-top: 7px;
+  margin-bottom: 6px;
+ }
+ 
+ .borders:hover{
+  background-color: rgb(135, 232, 135);
+ }
+ 
+ .border2{
+  padding-right: 2%;
+  padding-left: 2%;
+  display: block;
+  padding: 4px;
+  text-align: center;
+ }
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
