--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ input[type=submit] {
   height: 150px;
   padding: 2px;
   display: inline-block;
-  background-color: burlywood;
+  background-color: antiquewhite;
   border-radius: 4px;
   margin-top: 7px;
   margin-bottom: 6px;
