--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,10 @@ input[type=submit] {
     padding: 0;
   }
 
+  .borders{
+    width: 50%;
+  }
+
 } 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
