--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ input[type=submit] {
  }
  
  .border2{
+  margin: 0 auto;
   padding-right: 2%;
   padding-left: 2%;
   display: block;
@@ -165,4 +166,5 @@ input[type=submit] {
     float: none;
     width: 100%;
   }
+
 }
