--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: aliceblue;
 }
 .header h1 {
-  font-size: 2.369em;
+  font-size: 50px;
 }
 .body h2 {
   padding:10px;
@@ -152,10 +152,6 @@ input[type=submit] {
   .leftcolumn, .rightcolumn {   
     width: 100%;
     padding: 0;
-  }
-
-  .header h1 {
-    font-size: 4.209em;
   }
 
   .borders{
