--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   background-color: aliceblue;
 }
 .header h1 {
-  font-size: 50px;
+  font-size: 2.369em;
 }
 .body h2 {
   padding:10px;
@@ -154,6 +154,10 @@ input[type=submit] {
     padding: 0;
   }
 
+  .header h1 {
+    font-size: 4.209em;
+  }
+
   .borders{
     width: 100%;
   }
@@ -163,5 +167,9 @@ input[type=submit] {
   .topnav a {
     float: none;
     width: 100%;
+  }
+
+  .header h1 {
+    font-size: 2.369em;
   }
 }
