--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ input[type=submit] {
   display: block;
   padding: 4px;
   text-align: center;
+  text-decoration: none;
  }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
