--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,9 @@ input[type=submit] {
   display: block;
   padding: 4px;
   text-align: center;
+ }
+
+ .border2 a{
   text-decoration: none;
  }
 
