--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,7 @@ input[type=submit] {
 
  .border2 a{
   text-decoration: none;
+  color: black;
  }
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
