--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 * {
   box-sizing: border-box;
 }
+/*=======*/
+body{
+  box-sizing: border-box;
+}
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   padding: 10px;
@@ -16,6 +20,82 @@ body {
 }
 .header h1 {
   font-size: 50px;
+}
+.body h2 {
+  padding:10px;
+  text-align: center;
+  background-color:antiquewhite;
+}
+/*Style for top navigation bar*/
+.topnav {
+  overflow: hidden;
+  background-color:cadetblue;
+}
+/*Style for top navigation links*/
+.topnav a {
+  float: left;
+  display: block;
+  color: aliceblue;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+/*Change color on hover*/
+.topnav a:hover {
+  background-color:rgb(135, 232, 135);
+  color: black;
+}
+/*Two unequal columns that will be next to eachother*/
+/*left column*/
+.leftcolumn {
+  float:left;
+  width:25%;
+  background-color: aliceblue;
+  padding-left: 20px;
+}
+/*right column*/
+.rightcolumn {
+  float:right;
+  width: 70%;
+}
+/*row organization*/
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/*card affect*/
+.card {
+  background-color:burlywood;
+  padding: 20px;
+  margin-top: 20px;
+}
+/*footer for additional information*/
+.footer {
+  padding: 20px;
+  text-align: center;
+  background-color: dimgray;
+  color: white;
+  margin-top: 20px;
+}
+
+.bullets {
+  list-style-type: circle;
+
+}
+body {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 10px;
+  background: aliceblue;
+}
+/*Header Title*/
+.header {
+  padding: 30px;
+  text-align: center;
+  background-color: aliceblue;
+}
+.header h1 {
+  font-size: 3.157em;
 }
 .body h2 {
   padding:10px;
@@ -105,7 +185,7 @@ input {
 button {
   color: black;
   font-size: 20px;
-  width: 100%;
+  width: 30%;
   padding: 5px;
   margin-top: 5px;
   border: solid;
@@ -119,17 +199,78 @@ input[type=submit] {
   font-family: 'Fredoka One', cursive;
   background-color: rgba(0, 128, 255, 0.9);
 }
+
+
+/*Event grid for annoucement page css*/
+
+.borders{
+  margin: 0 auto;
+  width: 30%;
+  height: 150px;
+  padding: 2px;
+  display: inline-block;
+  background-color: antiquewhite;
+  border-radius: 4px;
+  margin-top: 7px;
+  margin-bottom: 6px;
+}
+
+.borders:hover{
+  background-color: rgb(135, 232, 135);
+}
+
+.border2{
+  padding-right: 2%;
+  padding-left: 2%;
+  display: block;
+  padding: 4px;
+  text-align: center;
+}
+
+.border2 a{
+  text-decoration: none;
+  color: black;
+}
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
+  .leftcolumn, .rightcolumn {
     width: 100%;
     padding: 0;
   }
-} 
+
+  .header h1 {
+    font-size: 2.369em;
+  }
+
+  .borders{
+    width: 100%;
+  }
+}
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
   .topnav a {
     float: none;
     width: 100%;
   }
+
+}
+/*=======*/
+@media only screen and (max-device-width: 480px) {
+    div#wrapper {
+      width: 400px;
+    }
+    div#header h1 {
+      font-size: 140%;
+    }
+
+    #content {
+      float: none;
+      width: 100%;
+    }
+
+    #nav-list {
+      float:none;
+      width: auto;
+    }
 }
